# CloudBuildsDemoQt

./: CMakeLists.txt  CloudBuildsDemoQt.pro  README.md  main.cpp  main.qml
android/: AndroidManifest.xml  build.gradle
android/res/values/: libs.xml  strings.xml
ios/: Project-Info.plist
